--- a/packages/blocks-next/src/blocks/cart-items/style.scss
+++ b/packages/blocks-next/src/blocks/cart-items/style.scss
@@ -1,13 +1,16 @@
 .wp-block-surecart-cart-items__wrapper {
 	flex: 1 1 200px;
-	gap: 1.25em;
 	overflow: auto;
 	display: flex;
 	flex-direction: column;
 
-	.sc-quantity-selector {
-		margin-top: var(--sc-spacing-small);
+	.sc-product-line-item {
+		padding-bottom: 1.25em;
+		border-bottom: var(--sc-drawer-border);
+		margin-bottom: 1.25em;
+	}
 
+	.sc-quantity-selector {
 		&[hidden] {
 			display: none;
 		}
@@ -18,6 +21,15 @@
 		border: none;
 		box-shadow: none;
 		padding: 0;
+		padding: 12px;
+		margin: -12px;
+		line-height: 1;
+		color: var(--sc-input-label-color);
+
+		svg {
+			margin: 0;
+			display: block;
+		}
 
 		&:focus {
 			outline: none;
