--- a/packages/blocks-next/src/styles/product-line-item.scss
+++ b/packages/blocks-next/src/styles/product-line-item.scss
@@ -48,6 +48,7 @@
 
 	&__text-details {
 		display: grid;
+		gap: 6px;
 	}
 
 	&__title {
@@ -65,6 +66,7 @@
 		-webkit-line-clamp: 3;
 		-moz-box-lines: 3;
 		overflow: hidden;
+		line-height: 1;
 		text-overflow: ellipsis;
 		text-decoration: none;
 		color: inherit;
@@ -120,7 +122,7 @@
 	}
 
 	&__description {
-		color: var(--sc-price-label-color, var(--sc-input-help-text-color));
+		color: var(--sc-input-label-color);
 		font-size: var(
 			--sc-price-label-font-size,
 			var(--sc-input-help-text-font-size-medium)
@@ -129,8 +131,8 @@
 	}
 
 	&__image {
-		width: var(--sc-product-line-item-image-size, 4em);
-		height: var(--sc-product-line-item-image-size, 4em) !important;
+		width: var(--sc-product-line-item-image-size, 6em);
+		height: var(--sc-product-line-item-image-size, 6em) !important;
 		object-fit: cover;
 		border-radius: 4px;
 		border: solid 1px var(--sc-input-border-color, var(--sc-input-border));
