--- a/styles/plugin-upgrade-notice.css
+++ b/styles/plugin-upgrade-notice.css
@@ -1,34 +1,43 @@
 .sc-major-update-warning {
-    margin-block-end: 5px;
-    max-width: 1000px;
-    display: flex;
+	display: flex;
+	max-width: 1000px;
+	margin-block-end: 5px;
 }
+
+.sc-major-update-warning__message p:before {
+	content: none;
+}
+
 .sc-major-update-warning__separator {
-    margin: 15px -12px;
+	margin: 15px -12px;
 }
+
 .sc-major-update-warning__icon {
-    font-size: 17px;
-    margin-inline-end: 9px;
-    margin-inline-start: 2px;
+	font-size: 17px;
+	margin-inline: 2px 9px;
 }
+
 .sc-major-update-warning__title {
-    font-weight: 600;
-    margin-block-end: 10px;
+	font-weight: 600;
+	margin-block-end: 10px;
 }
+
 .sc-major-update-warning + p {
-    display: none;
+	display: none;
 }
 
 .notice-success .sc-major-update-warning__separator {
-    border: 1px solid #46b450;
+	border: 1px solid #46b450;
 }
+
 .notice-success .sc-major-update-warning__icon {
-    color: #79ba49;
+	color: #79ba49;
 }
 
 .notice-warning .sc-major-update-warning__separator {
-    border: 1px solid #ffb900;
+	border: 1px solid #ffb900;
 }
+
 .notice-warning .sc-major-update-warning__icon {
-    color: #f56e28;
+	color: #f56e28;
 }
