--- a/packages/blocks-next/src/blocks/product-page/style.scss
+++ b/packages/blocks-next/src/blocks/product-page/style.scss
@@ -1,3 +1,11 @@
 .wp-block-surecart-product-page {
 	width: 100%;
 }
+
+/** Fix for if themes dequeue default wordpress global styles */
+.is-layout-flex {
+	display: flex;
+}
+.is-layout-grid {
+	display: grid;
+}
