--- a/packages/blocks-next/src/blocks/cart-items/style.scss
+++ b/packages/blocks-next/src/blocks/cart-items/style.scss
@@ -4,10 +4,10 @@
 	display: flex;
 	flex-direction: column;
 
-	.sc-product-line-item {
-		padding-bottom: 1.25em;
+	.sc-product-line-item:not(:last-child) {
+		padding-bottom: 2em;
 		border-bottom: var(--sc-drawer-border);
-		margin-bottom: 1.25em;
+		margin-bottom: 2em;
 	}
 
 	.sc-quantity-selector {
