--- a/packages/components/src/components/controllers/checkout-form/invoice-receipt-download/sc-line-item-invoice-receipt-download.scss
+++ b/packages/components/src/components/controllers/checkout-form/invoice-receipt-download/sc-line-item-invoice-receipt-download.scss
@@ -14,7 +14,10 @@ sc-icon {
 }
 
 .sc-invoice-download-link {
-  color: var(--sc-color-gray-400);
+  display: inline-flex;
+  gap: var(--sc-spacing-x-small);
+  text-decoration: none;
+  color: inherit;
 
   svg {
     color: var(--sc-color-gray-400);
