Scratch amount before amount.

--- a/templates/parts/product-info.html
+++ b/templates/parts/product-info.html
@@ -48,8 +48,8 @@
 		<div class="wp-block-group">
 			<!-- wp:group {"style":{"spacing":{"blockGap":"0.5rem"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"left"}} -->
 			<div class="wp-block-group">
+				<!-- wp:surecart/price-scratch-amount {"style":{"typography":{"textDecoration":"line-through","fontStyle":"normal","fontWeight":"500"},"color":{"text":"#686868"}}} /-->
 				<!-- wp:surecart/price-amount {"style":{"typography":{"fontStyle":"normal","fontWeight":"700"}}} /-->
-				<!-- wp:surecart/price-scratch-amount {"style":{"typography":{"textDecoration":"line-through"}}} /-->
 				<!-- wp:surecart/price-interval {"style":{"typography":{"fontStyle":"normal","fontWeight":"700"}}} /-->
 			</div>
 			<!-- /wp:group -->
