Use gap for spacing

--- a/packages/components/src/components/controllers/checkout-form/invoice-details/sc-invoice-details.scss
+++ b/packages/components/src/components/controllers/checkout-form/invoice-details/sc-invoice-details.scss
@@ -2,6 +2,9 @@
   display: block;
 }
 
-.invoice-details {
-  margin-bottom: var(--sc-spacing-medium);
+::slotted(*) {
+  margin: 4px 0 !important;
+}
+::slotted(sc-divider) {
+  margin: 16px 0 !important;
 }
