--- a/packages/blocks-next/src/blocks/cart-line-item-remove/style.scss
+++ b/packages/blocks-next/src/blocks/cart-line-item-remove/style.scss
@@ -1,6 +1,6 @@
 .wp-block-surecart-cart-line-item-remove {
 	cursor: pointer;
-	display: flex;
+	display: inline-flex;
 	align-items: center;
 	gap: 0.25em;
 	color: var(--sc-color-primary-500);
