--- a/packages/blocks-next/src/blocks/cart-items/style.scss
+++ b/packages/blocks-next/src/blocks/cart-items/style.scss
@@ -4,16 +4,14 @@
 	display: flex;
 	flex-direction: column;
 
-	.sc-product-line-item:not(:last-child) {
-		padding-bottom: 2em;
-		border-bottom: var(--sc-drawer-border);
-		margin-bottom: 2em;
-	}
-
 	.sc-quantity-selector {
 		&[hidden] {
 			display: none;
 		}
+	}
+
+	.sc-product-line-item:last-child .wp-block-separator {
+		display: none;
 	}
 
 	.sc-product-line-item__remove-button {
