Remove margin from list item

--- a/packages/blocks-next/src/blocks/product-template/style.scss
+++ b/packages/blocks-next/src/blocks/product-template/style.scss
@@ -9,6 +9,7 @@
 .sc-product-item {
 	height: 100%;
 	box-sizing: border-box;
+	margin: 0 !important;
 
 	&.sc-has-animation-fade-up {
 		opacity: 0;
