--- a/packages/blocks-next/src/blocks/product-template/style.scss
+++ b/packages/blocks-next/src/blocks/product-template/style.scss
@@ -68,14 +68,10 @@ a.sc-product-item-link,
 	}
 }
 
-@media (max-width: 576px) {
-	.sc-product-list-migrated.wp-block-surecart-product-template {
-		grid-template-columns: 1fr !important;
-	}
-}
-
-@media (min-width: 576px) and (max-width: 768px) {
-	.sc-product-list-migrated.wp-block-surecart-product-template {
-		grid-template-columns: repeat(3, 1fr);;
+@media (min-width: 480px) and (max-width: 768px) {
+	@for $i from 4 through 10 {
+		.wp-block-surecart-product-template.sc-product-template-columns-#{$i} {
+			grid-template-columns: repeat(3, 1fr);
+		}
 	}
 }
