Slide out cart block gap default

--- a/templates/parts/cart.html
+++ b/templates/parts/cart.html
@@ -21,7 +21,7 @@
 </div>
 <!-- /wp:group -->
 
-<!-- wp:surecart/slide-out-cart-items {"border":false,"padding":{"top":"0em","right":"0em","bottom":"0em","left":"0em"},"style":{"spacing":{"padding":{"top":"2em","bottom":"2em","left":"2em","right":"2em"},"blockGap":"0px"}}} -->
+<!-- wp:surecart/slide-out-cart-items {"border":false,"padding":{"top":"0em","right":"0em","bottom":"0em","left":"0em"},"style":{"spacing":{"padding":{"top":"2em","bottom":"2em","left":"2em","right":"2em"},"blockGap":"2em"}}} -->
 <!-- wp:group {"style":{"layout":{"selfStretch":"fill","flexSize":null},"dimensions":{"minHeight":""}},"layout":{"type":"default"}} -->
 <div class="wp-block-group">
 	<!-- wp:group {"style":{"layout":{"selfStretch":"fit","flexSize":null}},"layout":{"type":"flex","flexWrap":"nowrap","verticalAlignment":"stretch"}} -->
@@ -95,11 +95,6 @@
 	<!-- /wp:group -->
 </div>
 <!-- /wp:group -->
-
-<!-- wp:separator {"className":"is-style-wide","style":{"color":{"background":"#dce0e6"},"spacing":{"margin":{"top":"2em","bottom":"2em"}}}} -->
-<hr class="wp-block-separator has-text-color has-alpha-channel-opacity has-background is-style-wide"
-	style="margin-top:2em;margin-bottom:2em;background-color:#dce0e6;color:#dce0e6" />
-<!-- /wp:separator -->
 <!-- /wp:surecart/slide-out-cart-items -->
 
 <!-- wp:group {"style":{"spacing":{"padding":{"top":"2em","bottom":"2em","left":"2em","right":"2em"},"blockGap":"1em"}},"layout":{"type":"default"}} -->
