Line item remove options.

--- a/packages/blocks-next/src/blocks/cart-line-item-remove/style.scss
+++ b/packages/blocks-next/src/blocks/cart-line-item-remove/style.scss
@@ -5,7 +5,7 @@
 	gap: 0.25em;
 	color: var(--sc-color-primary-500);
 	font-weight: var(--sc-font-weight-semibold);
-	font-size: var(--sc-font-size-small);
+	font-size: var(--sc-font-size-medium);
 
 	&__icon {
 		width: 1.1em;
