--- a/templates/parts/cart.html
+++ b/templates/parts/cart.html
@@ -21,54 +21,50 @@
 </div>
 <!-- /wp:group -->
 
-<!-- wp:surecart/slide-out-cart-items {"border":false,"padding":{"top":"0em","right":"0em","bottom":"0em","left":"0em"},"style":{"spacing":{"padding":{"top":"2em","bottom":"2em","left":"2em","right":"2em"},"blockGap":"2em"}}} -->
+<!-- wp:surecart/slide-out-cart-items {"border":false,"padding":{"top":"0em","right":"0em","bottom":"0em","left":"0em"},"metadata":{"ignoredHookedBlocks":["surecart/cart-line-item-divider"]},"style":{"spacing":{"padding":{"top":"2em","bottom":"2em","left":"2em","right":"2em"},"blockGap":"2em"}}} -->
 <!-- wp:group {"style":{"layout":{"selfStretch":"fill","flexSize":null},"dimensions":{"minHeight":""}},"layout":{"type":"default"}} -->
 <div class="wp-block-group">
 	<!-- wp:group {"style":{"layout":{"selfStretch":"fit","flexSize":null}},"layout":{"type":"flex","flexWrap":"nowrap","verticalAlignment":"stretch"}} -->
 	<div class="wp-block-group">
-		<!-- wp:surecart/cart-line-item-image {"aspectRatio":"1","width":"","height":"","style":{"layout":{"selfStretch":"fixed","flexSize":"114px"},"border":{"color":"#dce0e6","width":"1px","radius":"4px"}}} /-->
+		<!-- wp:surecart/cart-line-item-image {"aspectRatio":"1","width":"","height":"","style":{"layout":{"selfStretch":"fixed","flexSize":"114px"},"border":{"color":"#dce0e6","width":"1px","radius":"4px"},"color":{"duotone":"unset"},"spacing":{"margin":{"top":"0","bottom":"0"}}}} /-->
 
 		<!-- wp:group {"style":{"layout":{"selfStretch":"fill","flexSize":null},"spacing":{"blockGap":"5px"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"stretch","flexWrap":"nowrap","verticalAlignment":"top"}} -->
 		<div class="wp-block-group">
-			<!-- wp:group {"style":{"layout":{"selfStretch":"fill","flexSize":null}},"layout":{"type":"default"}} -->
+			<!-- wp:group {"style":{"layout":{"selfStretch":"fill","flexSize":null}},"layout":{"type":"flex","flexWrap":"nowrap","verticalAlignment":"stretch","justifyContent":"space-between"}} -->
 			<div class="wp-block-group">
-				<!-- wp:group {"style":{"layout":{"selfStretch":"fill","flexSize":null}},"layout":{"type":"flex","flexWrap":"nowrap","verticalAlignment":"stretch","justifyContent":"space-between"}} -->
+				<!-- wp:group {"style":{"layout":{"selfStretch":"fixed","flexSize":"50%"},"spacing":{"blockGap":"4px"}},"layout":{"type":"default"}} -->
 				<div class="wp-block-group">
-					<!-- wp:group {"style":{"layout":{"selfStretch":"fixed","flexSize":"50%"},"spacing":{"blockGap":"4px"}},"layout":{"type":"default"}} -->
+					<!-- wp:surecart/cart-line-item-title {"style":{"typography":{"fontStyle":"normal","fontWeight":"600","lineHeight":"1","textDecoration":"none"},"color":{"text":"#4b5563"},"elements":{"link":{"color":{"text":"#4b5563"}}}}} /-->
+
+					<!-- wp:group {"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"default"}} -->
 					<div class="wp-block-group">
-						<!-- wp:surecart/cart-line-item-title {"style":{"typography":{"fontStyle":"normal","fontWeight":"600","lineHeight":"1","textDecoration":"none"},"color":{"text":"#4b5563"},"elements":{"link":{"color":{"text":"#4b5563"}}}}} /-->
+						<!-- wp:surecart/cart-line-item-price-name {"style":{"color":{"text":"#828c99"},"elements":{"link":{"color":{"text":"#828c99"}}},"typography":{"fontSize":"14px","lineHeight":"1.4"}}} /-->
 
-						<!-- wp:group {"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"default"}} -->
-						<div class="wp-block-group">
-							<!-- wp:surecart/cart-line-item-price-name {"style":{"color":{"text":"#828c99"},"elements":{"link":{"color":{"text":"#828c99"}}},"typography":{"fontSize":"14px","lineHeight":"1.4"}}} /-->
-
-							<!-- wp:surecart/cart-line-item-variant {"style":{"color":{"text":"#828c99"},"elements":{"link":{"color":{"text":"#828c99"}}},"typography":{"fontSize":"14px","lineHeight":"1.4"}}} /-->
-						</div>
-						<!-- /wp:group -->
-
-						<!-- wp:surecart/cart-line-item-status {"style":{"typography":{"textAlign":"right"}}} /-->
+						<!-- wp:surecart/cart-line-item-variant {"style":{"color":{"text":"#828c99"},"elements":{"link":{"color":{"text":"#828c99"}}},"typography":{"fontSize":"14px","lineHeight":"1.4"}}} /-->
 					</div>
 					<!-- /wp:group -->
 
-					<!-- wp:group {"style":{"layout":{"selfStretch":"fit","flexSize":null},"spacing":{"blockGap":"2px"}},"layout":{"type":"default"}} -->
+					<!-- wp:surecart/cart-line-item-status {"style":{"typography":{"textAlign":"right"},"elements":{"link":{"color":{"text":"var:preset|color|vivid-red"}}}},"textColor":"vivid-red"} /-->
+				</div>
+				<!-- /wp:group -->
+
+				<!-- wp:group {"style":{"layout":{"selfStretch":"fit","flexSize":null},"spacing":{"blockGap":"2px"}},"layout":{"type":"default"}} -->
+				<div class="wp-block-group">
+					<!-- wp:group {"style":{"spacing":{"blockGap":"4px"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"right"}} -->
 					<div class="wp-block-group">
-						<!-- wp:group {"style":{"spacing":{"blockGap":"4px"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"right"}} -->
-						<div class="wp-block-group">
-							<!-- wp:surecart/cart-line-item-scratch-amount {"style":{"color":{"text":"#828c99"},"elements":{"link":{"color":{"text":"#828c99"}}}}} /-->
+						<!-- wp:surecart/cart-line-item-scratch-amount {"style":{"color":{"text":"#828c99"},"elements":{"link":{"color":{"text":"#828c99"}}}}} /-->
 
-							<!-- wp:surecart/cart-line-item-amount {"style":{"color":{"text":"#4b5563"},"elements":{"link":{"color":{"text":"#4b5563"}}},"typography":{"fontStyle":"normal","fontWeight":"500","textAlign":"right"}}} /-->
+						<!-- wp:surecart/cart-line-item-amount {"style":{"color":{"text":"#4b5563"},"elements":{"link":{"color":{"text":"#4b5563"}}},"typography":{"fontStyle":"normal","fontWeight":"500","textAlign":"right"}}} /-->
 
-							<!-- wp:surecart/cart-line-item-interval {"style":{"typography":{"fontSize":"14px"},"color":{"text":"#828c99"},"elements":{"link":{"color":{"text":"#828c99"}}}}} /-->
-						</div>
-						<!-- /wp:group -->
+						<!-- wp:surecart/cart-line-item-interval {"style":{"typography":{"fontSize":"14px"},"color":{"text":"#828c99"},"elements":{"link":{"color":{"text":"#828c99"}}}}} /-->
+					</div>
+					<!-- /wp:group -->
 
-						<!-- wp:group {"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"default"}} -->
-						<div class="wp-block-group">
-							<!-- wp:surecart/cart-line-item-fees {"style":{"color":{"text":"#828c99"},"elements":{"link":{"color":{"text":"#828c99"}}},"typography":{"fontSize":"14px","textAlign":"right"}}} /-->
+					<!-- wp:group {"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"default"}} -->
+					<div class="wp-block-group">
+						<!-- wp:surecart/cart-line-item-fees {"style":{"color":{"text":"#828c99"},"elements":{"link":{"color":{"text":"#828c99"}}},"typography":{"fontSize":"14px","textAlign":"right"}}} /-->
 
-							<!-- wp:surecart/cart-line-item-trial {"style":{"color":{"text":"#828c99"},"elements":{"link":{"color":{"text":"#828c99"}}},"typography":{"fontSize":"14px","textAlign":"right"}}} /-->
-						</div>
-						<!-- /wp:group -->
+						<!-- wp:surecart/cart-line-item-trial {"style":{"color":{"text":"#828c99"},"elements":{"link":{"color":{"text":"#828c99"}}},"typography":{"fontSize":"14px","textAlign":"right"}}} /-->
 					</div>
 					<!-- /wp:group -->
 				</div>
@@ -83,9 +79,7 @@
 				<!-- /wp:group -->
 
 				<!-- wp:group {"style":{"layout":{"selfStretch":"fit","flexSize":null},"spacing":{"blockGap":"0px"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"right"}} -->
-				<div class="wp-block-group">
-					<!-- wp:surecart/cart-line-item-remove {"metadata":{"ignoredHookedBlocks":["surecart/cart-line-item-status"]},"style":{"typography":{"textAlign":"right"}}} /-->
-				</div>
+				<div class="wp-block-group"><!-- wp:surecart/cart-line-item-remove /--></div>
 				<!-- /wp:group -->
 			</div>
 			<!-- /wp:group -->
@@ -100,12 +94,13 @@
 <!-- wp:group {"style":{"spacing":{"padding":{"top":"2em","bottom":"2em","left":"2em","right":"2em"},"blockGap":"1em"}},"layout":{"type":"default"}} -->
 <div class="wp-block-group" style="padding-top:2em;padding-right:2em;padding-bottom:2em;padding-left:2em">
 	<!-- wp:surecart/slide-out-cart-subtotal {"layout":{"type":"flex","justifyContent":"space-between","flexWrap":"wrap"}} -->
-	<!-- wp:paragraph {"style":{"color":{"text":"#4b5563"},"elements":{"link":{"color":{"text":"#4b5563"}}},"typography":{"fontStyle":"normal","fontWeight":"600","fontSize":"18px"}}} -->
-	<p class="has-text-color has-link-color" style="color:#4b5563;font-size:18px;font-style:normal;font-weight:600">
+	<!-- wp:paragraph {"style":{"color":{"text":"#4b5563"},"elements":{"link":{"color":{"text":"#4b5563"}}},"typography":{"fontStyle":"normal","fontWeight":"400","fontSize":"18px"},"spacing":{"margin":{"top":"0px","bottom":"0px"}}}} -->
+	<p class="has-text-color has-link-color"
+		style="color:#4b5563;margin-top:0px;margin-bottom:0px;font-size:18px;font-style:normal;font-weight:400">
 		Subtotal</p>
 	<!-- /wp:paragraph -->
 
-	<!-- wp:surecart/cart-subtotal-amount {"style":{"typography":{"fontSize":"18px"},"color":{"text":"#4b5563"},"elements":{"link":{"color":{"text":"#4b5563"}}}}} /-->
+	<!-- wp:surecart/cart-subtotal-amount {"style":{"typography":{"fontSize":"18px","fontStyle":"normal","fontWeight":"600"},"color":{"text":"#4b5563"},"elements":{"link":{"color":{"text":"#4b5563"}}}}} /-->
 	<!-- /wp:surecart/slide-out-cart-subtotal -->
 
 	<!-- wp:surecart/slide-out-cart-submit {"style":{"color":{"background":"#006aff"},"border":{"radius":"4px"}}} /-->
