Fix quantity selector appearance.

--- a/packages/blocks-next/src/styles/quantity-selector.scss
+++ b/packages/blocks-next/src/styles/quantity-selector.scss
@@ -70,8 +70,16 @@
 	input[type="number"].sc-quantity-selector__control {
 		line-height: 1;
 		font-size: var(--sc-font-size-small);
-		height: 100%;
 		text-align: center;
+		-moz-appearance: textfield; /* Firefox */
+		appearance: textfield;
+
+		&::-webkit-outer-spin-button,
+		&::-webkit-inner-spin-button {
+			/* display: none; <- Crashes Chrome on hover */
+			-webkit-appearance: none;
+			margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+		}
 	}
 
 	&.quantity--small {
