Background color, cart remove default size.

--- a/templates/parts/cart.html
+++ b/templates/parts/cart.html
@@ -1,4 +1,4 @@
-<!-- wp:surecart/slide-out-cart {"width":"550px","layout":{"type":"default"}} -->
+<!-- wp:surecart/slide-out-cart {"width":"550px","style":{"color":{"background":"#ffffff"}},"layout":{"type":"default"}} -->
 <!-- wp:group {"style":{"spacing":{"padding":{"top":"2em","bottom":"0em","left":"2em","right":"2em"}}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
 <div class="wp-block-group" style="padding-top:2em;padding-right:2em;padding-bottom:0em;padding-left:2em">
 	<!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap"}} -->
@@ -79,7 +79,8 @@
 				<!-- /wp:group -->
 
 				<!-- wp:group {"style":{"layout":{"selfStretch":"fit","flexSize":null},"spacing":{"blockGap":"0px"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"right"}} -->
-				<div class="wp-block-group"><!-- wp:surecart/cart-line-item-remove /--></div>
+				<div class="wp-block-group">
+					<!-- wp:surecart/cart-line-item-remove {"style":{"typography":{"fontSize":"14px"}}} /--></div>
 				<!-- /wp:group -->
 			</div>
 			<!-- /wp:group -->
