SUR-2204 - Fix: Single product Page shrinks after migration from v2 to v3 with 2024 theme.

--- a/templates/parts/product-info.html
+++ b/templates/parts/product-info.html
@@ -1,4 +1,4 @@
-<!-- wp:surecart/product-page {"metadata":{"categories":["surecart_product_page"],"patternName":"surecart-product-standard","name":"Classic Product"}} -->
+<!-- wp:surecart/product-page {"metadata":{"categories":["surecart_product_page"],"patternName":"surecart-product-standard","name":"Classic Product"},"align":"wide"} -->
 <!-- wp:columns {"style":{"spacing":{"blockGap":{"top":"30px","left":"60px"}}}} -->
 <div class="wp-block-columns"><!-- wp:column {"width":""} -->
 	<div class="wp-block-column"><!-- wp:surecart/product-media /--></div>
