--- a/templates/templates/single-sc_product.html
+++ b/templates/templates/single-sc_product.html
@@ -2,7 +2,7 @@
 
 <!-- wp:group {"layout":{"type":"constrained"}} -->
 <div class="wp-block-group">
-	<!-- wp:surecart/product-page {"metadata":{"categories":["surecart_product_page"],"patternName":"surecart-product-standard","name":"Classic Product"}} -->
+	<!-- wp:surecart/product-page {"metadata":{"categories":["surecart_product_page"],"patternName":"surecart-product-standard","name":"Classic Product"},"align":"wide"} -->
 	<!-- wp:columns {"style":{"spacing":{"blockGap":{"top":"30px","left":"60px"}}}} -->
 	<div class="wp-block-columns"><!-- wp:column {"width":""} -->
 		<div class="wp-block-column"><!-- wp:surecart/product-media /--></div>
