--- a/packages/blocks-next/src/styles/tag.scss
+++ b/packages/blocks-next/src/styles/tag.scss
@@ -3,6 +3,7 @@
 	align-items: center;
 	line-height: 1;
 	white-space: nowrap;
+	text-decoration: none;
 	user-select: none;
 	font-weight: var(--sc-font-weight-bold);
 	font-size: var(--sc-font-size-small);
