Add font size default to product page

--- a/templates/templates/single-sc_product.html
+++ b/templates/templates/single-sc_product.html
@@ -13,7 +13,7 @@
 			<!-- wp:surecart/product-collection-tag /-->
 			<!-- /wp:surecart/product-collection-tags -->
 
-			<!-- wp:surecart/product-title /-->
+			<!-- wp:surecart/product-title {"style":{"typography":{"fontSize":"32px"}}} /-->
 
 			<!-- wp:group {"style":{"spacing":{"blockGap":"0"}}} -->
 			<div class="wp-block-group">
