--- a/templates/parts/product-info.html
+++ b/templates/parts/product-info.html
@@ -9,7 +9,7 @@
 		<!-- wp:surecart/product-collection-tag /-->
 		<!-- /wp:surecart/product-collection-tags -->
 
-		<!-- wp:surecart/product-title /-->
+		<!-- wp:surecart/product-title {"style":{"typography":{"fontSize":"32px"}}} /-->
 
 		<!-- wp:group {"style":{"spacing":{"blockGap":"0"}}} -->
 		<div class="wp-block-group">
@@ -26,8 +26,8 @@
 			<!-- /wp:group -->
 
 			<!-- wp:group {"style":{"spacing":{"blockGap":"0.5em"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"left"}} -->
-			<div class="wp-block-group">
-				<!-- wp:surecart/product-selected-price-trial /-->
+			<div class="wp-block-group"><!-- wp:surecart/product-selected-price-trial /-->
+
 				<!-- wp:surecart/product-selected-price-fees /-->
 			</div>
 			<!-- /wp:group -->
@@ -49,10 +49,13 @@
 			<!-- wp:group {"style":{"spacing":{"blockGap":"0.5rem"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"left"}} -->
 			<div class="wp-block-group">
 				<!-- wp:surecart/price-scratch-amount {"style":{"typography":{"textDecoration":"line-through","fontStyle":"normal","fontWeight":"500"},"color":{"text":"#686868"}}} /-->
+
 				<!-- wp:surecart/price-amount {"style":{"typography":{"fontStyle":"normal","fontWeight":"700"}}} /-->
+
 				<!-- wp:surecart/price-interval {"style":{"typography":{"fontStyle":"normal","fontWeight":"700"}}} /-->
 			</div>
 			<!-- /wp:group -->
+
 			<!-- wp:surecart/price-trial {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"} /-->
 
 			<!-- wp:surecart/price-setup-fee {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"} /-->
