Display when trial is present that the discount is applied on first payment

--- a/packages/components/src/components/ui/coupon-form/sc-coupon-form.scss
+++ b/packages/components/src/components/ui/coupon-form/sc-coupon-form.scss
@@ -35,6 +35,11 @@ sc-alert {
     }
   }
 }
+.coupon-display {
+  &--price-trial {
+    --price-size: var(--sc-font-size-small);
+  }
+}
 
 @container (max-width: 320px) {
   .coupon-form {
