--- a/packages/components/src/components/ui/sc-dialog/sc-dialog.scss
+++ b/packages/components/src/components/ui/sc-dialog/sc-dialog.scss
@@ -1,5 +1,6 @@
 :host {
   --width: 31rem;
+  --height: auto;
   --header-spacing: var(--sc-spacing-large);
   --body-spacing: var(--sc-spacing-large);
   --footer-spacing: var(--sc-spacing-large);
@@ -26,6 +27,7 @@
   flex-direction: column;
   z-index: 2;
   width: var(--width);
+  height: var(--height);
   max-width: 100vw;
   max-height: 100vh;
   background-color: var(--sc-panel-background-color);
