Better compatibility with non theme.json themes using negative margins.

--- a/packages/blocks-next/src/blocks/product-page/style.scss
+++ b/packages/blocks-next/src/blocks/product-page/style.scss
@@ -1,5 +1,11 @@
 .wp-block-surecart-product-page {
 	width: 100%;
+
+	&.alignwide {
+		width: 100%;
+		margin: auto;
+		padding: 0;
+	}
 }
 
 /** Fix for if themes dequeue default wordpress global styles */
