--- a/packages/blocks-next/src/blocks/product-list-sidebar/style.scss
+++ b/packages/blocks-next/src/blocks/product-list-sidebar/style.scss
@@ -2,4 +2,32 @@
     .sc-sidebar-desktop.wp-block-surecart-product-list-sidebar {
         display: none;
     }
-  }
+}
+
+.wp-block-surecart-product-list-sidebar.sc-drawer {
+	flex: 1 1 auto;
+	overflow: auto;
+	width: 100%;
+	margin: auto;
+	border: var(--sc-drawer-border);
+	box-shadow: 0 1px 2px #0d131e1a;
+	font-size: 16px;
+
+	.sc-alert {
+		border-radius: 0;
+		&__icon svg {
+			width: 24px;
+			height: 24px;
+		}
+
+		*:not(:first-child) {
+			margin-bottom: 0;
+		}
+	}
+}
+
+// Stop the body from scrolling when the cart drawer is open.
+html:has(dialog.sc-drawer[open]) {
+	overflow: hidden;
+	scrollbar-gutter: stable;
+}
