Added new product list content block which wraps the template & sidebar & added default styling to it

--- a/packages/blocks-next/src/blocks/product-list-sidebar/style.scss
+++ b/packages/blocks-next/src/blocks/product-list-sidebar/style.scss
@@ -4,6 +4,12 @@
     }
 }
 
+@media (min-width: 481px) {
+	.sc-drawer.wp-block-surecart-product-list-sidebar {
+		display: none !important;
+	}
+}
+
 .wp-block-surecart-product-list-sidebar.sc-drawer {
 	flex: 1 1 auto;
 	overflow: auto;
