--- a/packages/blocks-next/src/blocks/product-list-sidebar-toggle/style.scss
+++ b/packages/blocks-next/src/blocks/product-list-sidebar-toggle/style.scss
@@ -1,4 +1,10 @@
 .wp-block-surecart-product-list-sidebar-toggle {
     cursor: pointer;
     width: fit-content;
+    background: #0000;
+    border: none;
+    color: currentColor;
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
 }
