Added Richtext Labels & rendering, Fix Layout issue in editor for checkboxes, added necessary typography settings for sidebar block & rendered the classes on frontend

--- a/packages/blocks-next/src/blocks/product-list-sidebar/style.scss
+++ b/packages/blocks-next/src/blocks/product-list-sidebar/style.scss
@@ -50,6 +50,7 @@
 		padding: 1.25em;
 		min-height: auto;
 		color: var(--sc-input-label-color);
+		gap: 1.2em;
 	}
 	.sc-alert {
 		border-radius: 0;
