--- a/packages/blocks-next/src/blocks/product-list-sidebar-toggle/style.scss
+++ b/packages/blocks-next/src/blocks/product-list-sidebar-toggle/style.scss
@@ -2,14 +2,12 @@
 	cursor: pointer;
 	user-select: none;
 	width: fit-content;
-	background: #0000;
-	border: none;
 	color: currentColor;
 	cursor: pointer;
 	margin: 0;
 	padding: 0;
-	display: flex;
-	gap: 0.25em;
+	display: inline-flex;
+	gap: 0.5em;
 	align-items: center;
 	font-weight: var(--sc-font-weight-semibold);
 }
